modification du lien moncv en index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
         <head>
                 <meta charset="utf-8"/>
-                <title>moncv</title>
+                <meta http-equiv="X-UA-compatible" content="IE=edge">
+                <meta name="viewport" content="width-device-width, intial-scale=0.1">
+                <title>moncv| contat </title>
         </head>
         <body>
             <h1>diomande souleymane</h1>
-            <img src="diom.jpg" width="150" height="200" title="photo de diomande souleymane">
+            <a href="diom.jpg">
+                <img src="diom.jpg"alt width="180px" height="200px">
+            </a>
             <h2>Mon experience</h2>
                 <ul>
                     <li><strong>De 2017 à 2019</strong>, agent commercial</li>
